--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=lozinka
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.error.whitelabel.enabled=false
+logging.level.org.thymeleaf=DEBUG
+logging.level.org.springframework.web=DEBUG
